--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.27",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^10.3.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gifted-chat": "^2.6.5",
